--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,17 @@ jobs:
         docker build -t my-app .
         docker run my-app npm test
 
-    - name: Push to Docker Hub
+    - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        docker tag my-app username/repo:latest
-        docker push username/repo:latest
+
+    - name: Tag Docker image
+      run: docker tag my-app username/repo:latest
+
+    - name: Push Docker image
+      run: docker push username/repo:latest
 
     - name: Deploy
       run: |
