--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Tag Docker image
-      run: docker tag my-app username/repo:latest
+      run: docker tag my-app hackerarun/repo:latest
 
     - name: Push Docker image
-      run: docker push username/repo:latest
+      run: docker push hackerarun/repo:latest
 
     - name: Deploy
       run: |
