--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Build and test
+    - name: Deploy
       run: |
-        docker build -t my-app .
-        docker run my-app npm test
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        server-ip: ${{ secrets.SERVER_IP }}
+        server-port: ${{ secrets.SERVER_PORT }}
+        remote-username: ${{ secrets.REMOTE_USERNAME }}
+        docker-compose up -d
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -25,12 +28,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Tag Docker image
-      run: docker tag my-app hackerarun/repo:latest
+      run: docker tag my-app DOCKER_USERNAME/repo:latest
 
     - name: Push Docker image
-      run: docker push hackerarun/repo:latest
+      run: docker push DOCKER_USERNAME/repo:latest
 
-    - name: Deploy
-      run: |
-        # Add your deployment steps here
-        echo "Deploying to production..."
+
