--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
+      
     - name: Deploy
-      run: |
+      uses: webfactory/ssh-agent@v0.5.0
+      with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         server-ip: ${{ secrets.SERVER_IP }}
         server-port: ${{ secrets.SERVER_PORT }}
         remote-username: ${{ secrets.REMOTE_USERNAME }}
-        docker-compose up -d
+        run: |
+          docker-compose up -d
+
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
