--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Deploy
       uses: webfactory/ssh-agent@v0.5.0
       with:
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
         host: ${{ secrets.SERVER_IP }}
-        server-port: ${{ secrets.SERVER_PORT }}
         username: ${{ secrets.REMOTE_USERNAME }}
+        password: ${{ secrets.SSH_PRIVATE_KEY }}
+        server-port: ${{ secrets.SERVER_PORT }}
         run: |
           docker-compose up -d
 
