--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
+    - name: Update known_hosts
+      run: |
+        mkdir -p ~/.ssh
+        ssh-keyscan secrets.SERVER_IP >> ~/.ssh/known_hosts 
+          
     - name: Deploy
       uses: webfactory/ssh-agent@v0.5.0
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.REMOTE_USERNAME }}
-        password: ${{ secrets.SSH_PRIVATE_KEY }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
         server-port: ${{ secrets.SERVER_PORT }}
         run: |
           docker-compose up -d
