--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Update known_hosts
       run: |
         mkdir -p ~/.ssh
-        ssh-keyscan secrets.SERVER_IP >> ~/.ssh/known_hosts 
+        ssh-keyscan 43.204.38.88 >> ~/.ssh/known_hosts 
           
     - name: Deploy
       uses: webfactory/ssh-agent@v0.5.0
