--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,37 @@
+---
 name: CI/CD
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: self-hosted
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Update known_hosts
-      run: |
-        mkdir -p ~/.ssh
-        ssh-keyscan 43.204.38.88 >> ~/.ssh/known_hosts 
-          
-    - name: Deploy
-      run: |
-        ssh ubuntu@43.204.38.88 'sudo docker-compose up -d'
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Update known_hosts
+        run: |+
+          mkdir -p ~/.ssh
+          ssh-keyscan 43.204.38.88 >> ~/.ssh/known_hosts 
+            
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@v2.1.5
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.SERVER_IP }}
+          server-port: ${{ secrets.SERVER_PORT }}
+          username: ${{ secrets.REMOTE_USERNAME }}
 
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Tag Docker image
-      run: docker tag my-app DOCKER_USERNAME/repo:latest
+      - name: Tag Docker image
+        run: docker tag my-app DOCKER_USERNAME/repo:latest
 
-    - name: Push Docker image
-      run: docker push DOCKER_USERNAME/repo:latest
-
-
+      - name: Push Docker image
+        run: docker push DOCKER_USERNAME/repo:latest
