--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,10 @@ jobs:
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@v2.1.5
         with:
-          key: ${{ secrets.KEY }}
-          host: ${{ secrets.HOST }}
-          server-port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.SERVER_IP }}
+          REMOTE_USER: ${{ secrets.REMOTE_USERNAME }}
+          REMOTE_PORT: ${{ secrets.SERVER_PORT }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
