--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,21 +16,6 @@ jobs:
           ssh-keyscan 43.204.38.88 >> ~/.ssh/known_hosts 
             
       - name: Deploy to Server
-        uses: easingthemes/ssh-deploy@v2.1.5
-        with:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          REMOTE_HOST: ${{ secrets.SERVER_IP }}
-          REMOTE_USER: ${{ secrets.REMOTE_USERNAME }}
-          REMOTE_PORT: ${{ secrets.SERVER_PORT }}
+        run: |
+          sshpass -p ${{ secrets.REMOTE_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.REMOTE_USERNAME }}@${{ secrets.SERVER_IP }} 'sudo docker-compose up -d'     
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Tag Docker image
-        run: docker tag my-app DOCKER_USERNAME/repo:latest
-
-      - name: Push Docker image
-        run: docker push DOCKER_USERNAME/repo:latest
