--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   samplefolder:
     build: ./samplefolder
-    container_name: samplecontainer
+    container_name: samplecontainerr
     ports:
       - "3000:3000"
     restart: on-failure
