--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,16 @@ jobs:
         run: |
           docker-compose up -d
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Tag Docker image
+        run: docker tag my-app hackerarun/repo:latest
+        
+      - name: Push Docker image
+        run: docker push hackerarun/repo:latest
             
 
