--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Tag Docker image
-        run: docker tag my-app hackerarun/repo:latest
+        run: docker tag sampleimage hackerarun/repo:latest
         
       - name: Push Docker image
         run: docker push hackerarun/repo:latest
