--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Deploy with docker-compose
         run: |
           docker-compose up -d
-          run: docker-compose pull sampleimage
+          docker-compose pull sampleimage
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
