--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,13 @@ jobs:
       - name: Deploy with docker-compose
         run: |
           sudo docker-compose up -d --build
-          sudo docker tag sampleimage 54.157.132.35:8081/sampleimage
-          sudo docker push 54.157.132.35:8081/sampleimage
-            
+
+      - name: Nexus Repo Publish
+        uses: sonatype-nexus-community/nexus-repo-github-action@master
+        with:
+          serverUrl: http://54.157.132.35:8081/repository/GithubAction-Docker/
+          username: ${{ secrets.NEXUS_USERNAME }}
+          password: ${{ secrets.NEXUS_PASSWORD }}
+          repository: GithubAction-Docker
+          
 
